<resources>
    <string name="app_name">SavingData</string>
    <string name="label_show">Friends</string>
    <string name="label_main">Profile</string>
    <string name="label_edit">Edit</string>
    <string name="label_add">Add</string>
    <string name="hello">Welcome</string>
    <string name="edit_text_hint">enter your username</string>
    <string name="edit_text_hint_blog">write anything you want</string>
    <string name="launch_btn">save blog</string>

    <string name="btn_save">GO</string>
    <string name="btn_delete">Clear User</string>
    <string name="btn_save_file">Save File</string>
    <string name="btn_edit_file">Delete File</string>
    <string name="btn_show_pic">Show Pics</string>

    <string name="preference_file_key">preferenceName</string>
    <string name="saved_name_str">preferenceName</string>

    <string name="friends_add_tv_title">Add a new friend</string>
    <string name="friends_add_tv_name">Name</string>
    <string name="friends_add_tv_gender">Gender</string>
    <string name="friends_add_tv_phone">Phone</string>
    <string name="friends_add_tv_fav">Favourite</string>
    <string name="friends_add_btn_enter">Save</string>
    <string name="friends_add_radio_girl">Girl</string>
    <string name="friends_add_radio_boy">Boy</string>

    <string name="friends_edit_tv_title">Edit friend</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>


</resources>
