<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/save_data_text_view"
        android:text="@string/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:textColor="@color/color_primary_text"/>

    <LinearLayout
        android:id="@+id/layout_new_user"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <EditText
            android:id="@+id/save_data_edit_text"
            android:hint="@string/edit_text_hint"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:textColor="@color/color_secondary_text"
            android:textSize="24sp"
            android:imeActionLabel="@string/btn_save_file"/>

        <Button
            android:id="@+id/save_data_btn_save"
            android:text="@string/btn_save"
            android:onClick="saveSharedPreference"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_old_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/save_data_btn_delete"
            android:text="@string/btn_delete"
            android:onClick="deleteSharedPreference"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:hint="@string/edit_text_hint_blog"
            android:layout_marginTop="30dp"
            android:inputType="textMultiLine"
            android:lines="8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:scrollbars="vertical"
            android:background="@drawable/edittext_style"
            android:textColor="@color/color_secondary_text"
            android:imeActionLabel="@string/btn_save_file" />
        <Button
            android:id="@+id/save_file_btn_save"
            android:text="@string/btn_save_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveTextFile"
            android:layout_gravity="right"/>
    </LinearLayout>



</LinearLayout>
